fix: add word-break in container

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,10 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+    text-align: center;
 }
 
 
